--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.1.2
   cloud_firestore: ^5.1.0
   firebase_core: ^3.1.0
+  qr_flutter: ^4.1.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
